--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reach/dialog": "^0.18.0",
+    "@reach/tabs": "^0.18.0",
     "axios": "^1.2.3",
     "next": "12.1.0",
     "react": "17.0.2",
