--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@reach/tabs": "^0.18.0",
     "axios": "^1.2.3",
     "next": "12.1.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-lazy-load-image-component": "^1.5.6"
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-tabs": "^4.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
