--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-loading-skeleton": "^3.4.0",
     "react-tabs": "^4.2.1"
   },
   "devDependencies": {
